--- a/style.css
+++ b/style.css
@@ -14,17 +14,21 @@ body {
 
   }
 
-  .section_botones{
+  .headerSection{
     width: 100%;
     min-height: 100px;
     max-height: auto;
-    background-color: blue;
+    background-color:#0D1E40;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
+  .returnImage{
+    width: 45px;
+    margin-right: 30%;
+
+  }
 
   .titulo{
     text-align: center;
@@ -33,13 +37,18 @@ body {
   }
 
   .btn{
-    width: 70px;
-    height: 30px;
-    background-color:yellow;
+    width: 30%;
+    height: 20%;
+    background-color:#F21D2F;
     border: none;
     outline: none;
     cursor: pointer;
     font-weight: bold;
+    border-radius: 5px;
+    padding: 10px 10px 10px 10px;
+    margin:10px;
+    font-size: 18px;
+    color:beige;
   }
 
   .btn:hover{
@@ -48,20 +57,22 @@ body {
 
   .container{
     display: flex;
-    justify-content: start;
+    align-items: center;
+    justify-content:center;
     flex-wrap: wrap;
   }
 
 
   .figure_container{
-    background-color: red;
-    width: 150px;
-    height: 150px;
+    background-color:#D9D9D9;
+    width: 313px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 60px;
-    margin-right: 50px;
+    align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 20px;
     transition: all 0.3s ease-out;
   }
@@ -76,4 +87,69 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.pokemon_image{
+    width: 250px;
+}
+
+.div_button_header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+
+.footerIndex{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #0D1E40;
+    width: 100%;
+    height: 100px;
+    margin-top: 30px;
+
+}
+
+.imageFooter{
+    width: 80px;
+    height: 25px;
+    margin-top: 5px;
+    
+
+}
+
+.imageFooterPokeBall{
+    width: 110px;
+    height: 30px;
+    
+
+}
+
+
+
+@media screen and (max-width: 768px) {
+    .btn {
+        width: 40%;
+        height: 25%;
+        font-size: 16px;
+    }
+
+    
+}
+
+@media screen and (min-width: 1200px) {
+    .btn {
+        width: 15%;
+        height: 15%;
+        font-size: 20px;
+    }
+
+    .returnImage{
+        width: 45px;
+        margin-right: 75%;
+    
+      }
 }
