--- a/style.css
+++ b/style.css
@@ -14,6 +14,87 @@ body {
 
   }
 
+  /*  Estilos pantalla de inicio */
+
+
+.bodyInicio{
+    background-color: #0D1E40;
+}
+
+.headerInicio{
+    display:flex;
+    align-items: center;
+    justify-content:center;
+
+}
+
+.imageLogoPokemonInicio{
+    width: 400px;
+    margin-top: 20px;
+    padding: 10px 40px 10px 40px;
+}
+
+.divSaludoInicial{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+
+.h1Saludo{
+    color: aliceblue;
+    font-size: 30px;
+    margin-top: 20px;
+    font-weight: bold;
+
+}
+
+.preguntaInicio{
+    color: aliceblue;
+    font-size: 22px;
+    margin-top: 15px;
+}
+
+
+.mainInicio{
+    align-items: center;
+    justify-self: center;
+    margin-top: 60px;
+    text-align: center;
+}
+
+.imagenPikachu{
+ width: 370px;
+}
+
+
+.divButtonVerPokemones{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.buttonVerPokemones{
+    background-color:#F2B807;
+    width: 270px;
+    height: 56px;
+    border-radius: 30px;
+    padding:2px 2px 2px 2px;
+    margin-top: 50px;
+    font-size: 25px;
+    font-weight: bold;
+    color: #0D1E40;
+    cursor: pointer;
+}
+
+
+
+
+
+/*Pagina Personajes */
+
   .headerSection{
     width: 100%;
     min-height: 100px;
@@ -22,12 +103,28 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px 25px 10px 25px;
+    
+  }
+ 
+  #input_NombrePokemon{
+    margin-left: auto;
+    width: 250px;
+    height: 45px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 12px;
+    
+
   }
 
   .returnImage{
     width: 45px;
-    margin-right: 30%;
-
+    margin-right: 30px;
+    cursor: pointer;
   }
 
   .titulo{
@@ -52,7 +149,8 @@ body {
   }
 
   .btn:hover{
-    background-color: red;
+    transform: scale(.9);
+    cursor: pointer;
   }
 
   .container{
@@ -67,6 +165,10 @@ body {
     background-color:#D9D9D9;
     width: 313px;
     height: 300px;
+    font-weight: bold;
+    font-size: 30px;
+    border-radius: 20px;
+    padding:20px 20px 40px 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -91,6 +193,11 @@ body {
 
 .pokemon_image{
     width: 250px;
+    
+}
+
+.namePokemon{
+    font-weight: bold;
 }
 
 .div_button_header{
@@ -136,6 +243,9 @@ body {
         height: 25%;
         font-size: 16px;
     }
+
+    
+
 
     
 }
